// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Distance /> renders correctly when nested 1`] = `
".cls_0 {
  display: contents;
}
.cls_1 {
  font-size: 20px;
  margin: 0;
  display: block;
  color: black;
}


<div className=test-theme cls_0>
  <div className=cls_1>4&nbsp;000 mil</div>
</div>;
"
`;

exports[`<Distance /> renders correctly with custom unit 1`] = `
".cls_0 {
  display: contents;
}


<div className=test-theme cls_0>4&nbsp;000,5 km</div>;
"
`;

exports[`<Distance /> renders correctly with default props 1`] = `
".cls_0 {
  display: contents;
}


<div className=test-theme cls_0>4&nbsp;000,5 mil</div>;
"
`;
